Fixed bug from the last commit.
Also added the game to the menu and the game bar. There is a problem: it looks ugly as its width is different from the previous game. I still don't know what to do with this.

--- a/src/normalGame.css
+++ b/src/normalGame.css
@@ -109,7 +109,7 @@ body {
 
 .gameImageLeft {
     object-fit: contain;
-    width: 14.5vw;
+    height: 10.9vw;
     border-width: 3px;
     border-color: white;
     border-style: solid;
